/*
 * MasterServer.h
 *
 *  Created on: Dec 1, 2017
 *      Author: cis505
 */

#ifndef BE_SERVER_MASTERSERVER_H_
#define BE_SERVER_MASTERSERVER_H_

#include <stdio.h>
#include <unistd.h>
#include <fstream>
#include <iostream>
#include <sstream>

#include <thread>

#include <grpc++/grpc++.h>

#include "../common/ServerToMasterImpl.h"
#include "../common/MasterServiceImpl.h"
#include "../common/HeartbeatServiceClient.h"



#endif /* BE_SERVER_MASTERSERVER_H_ */
